# optimize-the-unseen

./: .gitignore  README.md  eval_all_scenes.py  index.html  merge_csv_results.py  pyproject.toml
optimize_the_unseen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
optimize_the_unseen/dataparsers/nerfbusters/: nb_dataparser.py  nerfbuster_config.py
optimize_the_unseen/scripts/: clean_nerf.py  eval.py
